[gd_scene load_steps=21 format=3 uid="uid://dcumqqrwwwyka"]

[ext_resource type="Script" uid="uid://bv3co4b1itevy" path="res://pendulum_snake.gd" id="1_u7uwg"]
[ext_resource type="PackedScene" uid="uid://dixeajduuttbv" path="res://pendulum_snake/pendulum_snake_body.glb" id="2_3kixp"]
[ext_resource type="PackedScene" uid="uid://c4radq1dse01g" path="res://pendulum_snake/pendulum_snake_p15.glb" id="3_ngcpf"]
[ext_resource type="PackedScene" uid="uid://bg7g8yhodcaim" path="res://pendulum_snake/pendulum_snake_p14.glb" id="4_h63oo"]
[ext_resource type="PackedScene" uid="uid://b8hltg27cm3f0" path="res://pendulum_snake/pendulum_snake_p13.glb" id="5_qqdo1"]
[ext_resource type="PackedScene" uid="uid://do1wvwrdabrq7" path="res://pendulum_snake/pendulum_snake_p12.glb" id="6_0tjrh"]
[ext_resource type="PackedScene" uid="uid://c2cvonv67kyt3" path="res://pendulum_snake/pendulum_snake_p11.glb" id="7_5dlxv"]
[ext_resource type="PackedScene" uid="uid://b54q0h40pb1pb" path="res://pendulum_snake/pendulum_snake_p10.glb" id="8_tdcl2"]
[ext_resource type="PackedScene" uid="uid://de55tioxaro6y" path="res://pendulum_snake/pendulum_snake_p9.glb" id="9_8vgor"]
[ext_resource type="PackedScene" uid="uid://b4lf14hf7q1i7" path="res://pendulum_snake/pendulum_snake_p8.glb" id="10_k0s7b"]
[ext_resource type="PackedScene" uid="uid://bd3nwnfjix8hw" path="res://pendulum_snake/pendulum_snake_p7.glb" id="11_o5ma0"]
[ext_resource type="PackedScene" uid="uid://f2pl2plutmo6" path="res://pendulum_snake/pendulum_snake_p6.glb" id="12_e8q5m"]
[ext_resource type="PackedScene" uid="uid://cqacfba6e6ryl" path="res://pendulum_snake/pendulum_snake_p5.glb" id="13_hj42h"]
[ext_resource type="PackedScene" uid="uid://bfjopko75e7ut" path="res://pendulum_snake/pendulum_snake_p4.glb" id="14_ns8nj"]
[ext_resource type="PackedScene" uid="uid://ckbef8a41nxxw" path="res://pendulum_snake/pendulum_snake_p3.glb" id="15_wsbr1"]
[ext_resource type="PackedScene" uid="uid://8hnblvwoyhfn" path="res://pendulum_snake/pendulum_snake_p2.glb" id="16_65dqs"]
[ext_resource type="PackedScene" uid="uid://bgmjf85ldiagg" path="res://pendulum_snake/pendulum_snake_p1.glb" id="17_2u70n"]
[ext_resource type="PackedScene" uid="uid://c5p72qanh5lxl" path="res://pendulum_snake/pendulum_snake_body_rod.glb" id="18_704ih"]

[sub_resource type="Sky" id="Sky_ty2xf"]

[sub_resource type="Environment" id="Environment_6ipsd"]
background_mode = 1
background_color = Color(0.105614, 0.105614, 0.105614, 1)
sky = SubResource("Sky_ty2xf")

[node name="Node3D" type="Node3D"]
process_mode = 1
script = ExtResource("1_u7uwg")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6ipsd")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.705185, 0.271302, -0.655064, 0.195846, 0.813419, 0.547717, 0.681438, -0.514533, 0.520478, 0, 0, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.369477, 1.471)
fov = 45.0

[node name="Hinges" type="Node3D" parent="."]

[node name="HingeJoint3D_P15" type="HingeJoint3D" parent="Hinges"]
node_a = NodePath("../../StaticBody3D")
node_b = NodePath("../../Pendulums/RigidBody3D_P15")

[node name="HingeJoint3D_P14" type="HingeJoint3D" parent="Hinges"]
node_a = NodePath("../../StaticBody3D")
node_b = NodePath("../../Pendulums/RigidBody3D_P14")

[node name="HingeJoint3D_P13" type="HingeJoint3D" parent="Hinges"]
node_a = NodePath("../../StaticBody3D")
node_b = NodePath("../../Pendulums/RigidBody3D_P13")

[node name="HingeJoint3D_P12" type="HingeJoint3D" parent="Hinges"]
node_a = NodePath("../../StaticBody3D")
node_b = NodePath("../../Pendulums/RigidBody3D_P12")

[node name="HingeJoint3D_P11" type="HingeJoint3D" parent="Hinges"]
node_a = NodePath("../../StaticBody3D")
node_b = NodePath("../../Pendulums/RigidBody3D_P11")

[node name="HingeJoint3D_P10" type="HingeJoint3D" parent="Hinges"]
node_a = NodePath("../../StaticBody3D")
node_b = NodePath("../../Pendulums/RigidBody3D_P10")

[node name="HingeJoint3D_P9" type="HingeJoint3D" parent="Hinges"]
node_a = NodePath("../../StaticBody3D")
node_b = NodePath("../../Pendulums/RigidBody3D_P9")

[node name="HingeJoint3D_P8" type="HingeJoint3D" parent="Hinges"]
node_a = NodePath("../../StaticBody3D")
node_b = NodePath("../../Pendulums/RigidBody3D_P8")

[node name="HingeJoint3D_P7" type="HingeJoint3D" parent="Hinges"]
node_a = NodePath("../../StaticBody3D")
node_b = NodePath("../../Pendulums/RigidBody3D_P7")

[node name="HingeJoint3D_P6" type="HingeJoint3D" parent="Hinges"]
node_a = NodePath("../../StaticBody3D")
node_b = NodePath("../../Pendulums/RigidBody3D_P6")

[node name="HingeJoint3D_P5" type="HingeJoint3D" parent="Hinges"]
node_a = NodePath("../../StaticBody3D")
node_b = NodePath("../../Pendulums/RigidBody3D_P5")

[node name="HingeJoint3D_P4" type="HingeJoint3D" parent="Hinges"]
node_a = NodePath("../../StaticBody3D")
node_b = NodePath("../../Pendulums/RigidBody3D_P4")

[node name="HingeJoint3D_P3" type="HingeJoint3D" parent="Hinges"]
node_a = NodePath("../../StaticBody3D")
node_b = NodePath("../../Pendulums/RigidBody3D_P3")

[node name="HingeJoint3D_P2" type="HingeJoint3D" parent="Hinges"]
node_a = NodePath("../../StaticBody3D")
node_b = NodePath("../../Pendulums/RigidBody3D_P2")

[node name="HingeJoint3D_P1" type="HingeJoint3D" parent="Hinges"]
node_a = NodePath("../../StaticBody3D")
node_b = NodePath("../../Pendulums/RigidBody3D_P1")

[node name="Pendulums" parent="." instance=ExtResource("2_3kixp")]

[node name="RigidBody3D_P15" type="RigidBody3D" parent="Pendulums"]
transform = Transform3D(0.939692, 0.34202, 0, -0.34202, 0.939692, 0, 0, 0, 1, 0, 0, 0)
gravity_scale = 10.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -6.02, 0)

[node name="P15" parent="Pendulums/RigidBody3D_P15" instance=ExtResource("3_ngcpf")]

[node name="RigidBody3D_P14" type="RigidBody3D" parent="Pendulums"]
transform = Transform3D(0.939692, 0.34202, 0, -0.34202, 0.939692, 0, 0, 0, 1, 0, 0, 0)
gravity_scale = 10.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -5.79, 0)

[node name="P14" parent="Pendulums/RigidBody3D_P14" instance=ExtResource("4_h63oo")]

[node name="RigidBody3D_P13" type="RigidBody3D" parent="Pendulums"]
transform = Transform3D(0.939692, 0.34202, 0, -0.34202, 0.939692, 0, 0, 0, 1, 0, 0, 0)
gravity_scale = 10.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -5.58, 0)

[node name="P13" parent="Pendulums/RigidBody3D_P13" instance=ExtResource("5_qqdo1")]

[node name="RigidBody3D_P12" type="RigidBody3D" parent="Pendulums"]
transform = Transform3D(0.939692, 0.34202, 0, -0.34202, 0.939692, 0, 0, 0, 1, 0, 0, 0)
gravity_scale = 10.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -5.37, 0)

[node name="P12" parent="Pendulums/RigidBody3D_P12" instance=ExtResource("6_0tjrh")]

[node name="RigidBody3D_P11" type="RigidBody3D" parent="Pendulums"]
transform = Transform3D(0.939692, 0.34202, 0, -0.34202, 0.939692, 0, 0, 0, 1, 0, 0, 0)
gravity_scale = 10.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -5.18, 0)

[node name="P11" parent="Pendulums/RigidBody3D_P11" instance=ExtResource("7_5dlxv")]

[node name="RigidBody3D_P10" type="RigidBody3D" parent="Pendulums"]
transform = Transform3D(0.939692, 0.34202, 0, -0.34202, 0.939692, 0, 0, 0, 1, 0, 0, 0)
gravity_scale = 10.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -4.99, 0)

[node name="P10" parent="Pendulums/RigidBody3D_P10" instance=ExtResource("8_tdcl2")]

[node name="RigidBody3D_P9" type="RigidBody3D" parent="Pendulums"]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, 0, 0, 0)
gravity_scale = 10.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -4.82, 0)

[node name="P9" parent="Pendulums/RigidBody3D_P9" instance=ExtResource("9_8vgor")]

[node name="RigidBody3D_P8" type="RigidBody3D" parent="Pendulums"]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, 0, 0, 0)
gravity_scale = 10.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -4.66, 0)

[node name="P8" parent="Pendulums/RigidBody3D_P8" instance=ExtResource("10_k0s7b")]

[node name="RigidBody3D_P7" type="RigidBody3D" parent="Pendulums"]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, 0, 0, 0)
gravity_scale = 10.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -4.5, 0)

[node name="P7" parent="Pendulums/RigidBody3D_P7" instance=ExtResource("11_o5ma0")]

[node name="RigidBody3D_P6" type="RigidBody3D" parent="Pendulums"]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, 0, 0, 0)
gravity_scale = 10.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -4.35, 0)

[node name="P6" parent="Pendulums/RigidBody3D_P6" instance=ExtResource("12_e8q5m")]

[node name="RigidBody3D_P5" type="RigidBody3D" parent="Pendulums"]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, 0, 0, 0)
gravity_scale = 10.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -4.21, 0)

[node name="P5" parent="Pendulums/RigidBody3D_P5" instance=ExtResource("13_hj42h")]

[node name="RigidBody3D_P4" type="RigidBody3D" parent="Pendulums"]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, 0, 0, 0)
gravity_scale = 10.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -4.07, 0)

[node name="P4" parent="Pendulums/RigidBody3D_P4" instance=ExtResource("14_ns8nj")]

[node name="RigidBody3D_P3" type="RigidBody3D" parent="Pendulums"]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, 0, 0, 0)
gravity_scale = 10.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -3.95, 0)

[node name="P3" parent="Pendulums/RigidBody3D_P3" instance=ExtResource("15_wsbr1")]

[node name="RigidBody3D_P2" type="RigidBody3D" parent="Pendulums"]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, 0, 0, 0)
gravity_scale = 10.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -3.82, 0)

[node name="P2" parent="Pendulums/RigidBody3D_P2" instance=ExtResource("16_65dqs")]

[node name="RigidBody3D_P1" type="RigidBody3D" parent="Pendulums"]
transform = Transform3D(0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, 0, 0, 0)
gravity_scale = 10.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -3.71, 0)

[node name="P1" parent="Pendulums/RigidBody3D_P1" instance=ExtResource("17_2u70n")]

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="Rod" parent="StaticBody3D" instance=ExtResource("18_704ih")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ButtonStart" type="Button" parent="CanvasLayer"]
process_mode = 3
offset_left = 1664.0
offset_top = 64.0
offset_right = 1856.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 36
text = "Start"

[node name="ButtonReset" type="Button" parent="CanvasLayer"]
process_mode = 3
offset_left = 1664.0
offset_top = 224.0
offset_right = 1856.0
offset_bottom = 288.0
theme_override_font_sizes/font_size = 36
text = "Reset
"

[node name="ButtonTogglePause" type="Button" parent="CanvasLayer"]
process_mode = 3
offset_left = 1664.0
offset_top = 144.0
offset_right = 1856.0
offset_bottom = 208.0
theme_override_font_sizes/font_size = 36
text = "Pause
"

[connection signal="button_down" from="CanvasLayer/ButtonStart" to="." method="start"]
[connection signal="button_down" from="CanvasLayer/ButtonReset" to="." method="reset"]
[connection signal="button_down" from="CanvasLayer/ButtonTogglePause" to="." method="toggle_pause"]
